# trinity

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
trinity/: CHANGELOG.md  Cargo.toml
trinity-clipboard/: CHANGELOG.md  Cargo.toml  README.md
trinity-clipboard/src/: lib.rs
trinity-dictation/: CHANGELOG.md  Cargo.toml  README.md
trinity-dictation/src/: lib.rs
trinity-gui/: CHANGELOG.md  Cargo.toml  build.rs
trinity-gui/src/: daemon.rs  main.rs
trinity-gui/src/tray/: linux.rs  macos.rs  mod.rs
trinity-panel/: CHANGELOG.md  Cargo.toml
trinity-panel/src/: lib.rs
trinity-translator/: CHANGELOG.md  Cargo.toml
trinity-translator/src/: hotkey.rs  lib.rs  mouse.rs  ui.rs  unix.rs  windows.rs
trinity-util/: CHANGELOG.md  Cargo.toml
trinity-util/src/: cfg.rs  font.rs  hotkey.rs  icon.rs  lib.rs  persistence.rs
trinity/src/: daemon.rs  main.rs
trinity/src/tray/: linux.rs  macos.rs  mod.rs  windows.rs
