[workspace]
resolver = "3"
members = [
    "trinity",
    "trinity-panel",
    "trinity-util",
    "trinity-translator",
    "trinity-clipboard",
    "trinity-dictation",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unexpected_cfgs = "allow"

[workspace.dependencies]
eframe = "0.34"
egui = "0.34"
egui-theme-switch = "0.7.0"
egui_dock = "0.19.1"
cfg-if = "1"
cpal = "0.16"
deepl = { package = "deepl-api-client", version = "0.2" }
enigo = "0.6.1"
hound = "3.5"
log = "0.4"
rdev = "0.5"
cli-clipboard = "0.4"
global-hotkey = "0.8"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trinity-util = { path = "trinity-util" }
trinity-panel = { path = "trinity-panel" }
trinity = { path = "trinity" }
trinity-translator = { path = "trinity-translator" }
trinity-clipboard = { path = "trinity-clipboard" }
trinity-dictation = { path = "trinity-dictation" }
objc = "0.2"
cocoa = "0.26"
winapi = { version = "0.3", features = ["shellapi", "winuser", "windef", "ntdef", "libloaderapi"] }
ksni = "0.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
