[package]
name = "trinity-clipboard"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
trinity-util = { workspace = true }
egui = { workspace = true }
cli-clipboard = { workspace = true }
rdev = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
