[package]
name = "trinity-dictation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cpal = { workspace = true }
enigo = { workspace = true }
hound = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trinity-util = { workspace = true }
