[package]
name = "trinity-gui"
version.workspace = true
edition.workspace = true

[dependencies]
trinity-util = { path = "../trinity-util" }
trinity-translator = { path = "../trinity-translator" }
trinity-clipboard = { path = "../trinity-clipboard" }
trinity-dictation = { path = "../trinity-dictation" }
trinity-panel = { path = "../trinity-panel" }

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "trinity.exe"
LegalCopyright = "Copyright © 2021-2025 zu1k"
ProductName = "Trinity"
ProductVersion = "0.5.0"
FileDescription = "Trinity: Desktop AI trifecta assistant"
