[package]
name = "trinity-gui"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
trinity-util = { workspace = true }
trinity-translator = { workspace = true }
trinity-clipboard = { workspace = true }
trinity-dictation = { workspace = true }
trinity-panel = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
rdev = { workspace = true }
deepl = { workspace = true }
cli-clipboard = { workspace = true }

# Platform-specific tray dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = { workspace = true }
cocoa = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { workspace = true }

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "trinity.exe"
LegalCopyright = "Copyright © 2021-2025 zu1k"
ProductName = "Trinity"
ProductVersion = "0.5.0"
FileDescription = "Trinity: Desktop AI trifecta assistant"
