[package]
name = "trinity-panel"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
trinity-util = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-theme-switch = { workspace = true }
egui_dock = { workspace = true }
log = { workspace = true }
